[package]
name = "zkp-protocol-ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bulletproofs = "4.0.0"
curve25519-dalek = { version = "4.1.1", features = ["rand_core"] }
env_logger = "0.10.1"
hex = "0.4.3"
log = "0.4.20"
num-bigint = { version = "0.4.4", features = ["rand"] }
prost = "0.12.3"
rand = "0.8.5"
rand_core = "0.6.4"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
